Alteracao de estilos

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercício Copiar Itens</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
-  <div id="caixa1">
-    <div id="c1" class="curso">HTML</div>
-    <div id="c1" class="curso">CSS</div>
-    <div id="c1" class="curso">JavaScript</div>
-    <div id="c1" class="curso">PHP</div>
-    <div id="c1" class="curso">React</div>
-    <div id="c1" class="curso">MySql</div>
-  </div>
-  <button>Copiar</button>
-  <div id="caixa2"></div>
+  <main>
+    <div id="caixa1" class="caixa">
+      <div id="c1" class="curso">HTML</div>
+      <div id="c1" class="curso">CSS</div>
+      <div id="c1" class="curso">JavaScript</div>
+      <div id="c1" class="curso">PHP</div>
+      <div id="c1" class="curso">React</div>
+      <div id="c1" class="curso">MySql</div>
+    </div>
+    <button class="btn">Copiar</button>
+    <div id="caixa2" class="caixa"></div>
+  </main>
   <script src="script.js"></script>
 </body>
 
